[gd_scene load_steps=4 format=3 uid="uid://doegx3yoyqjii"]

[ext_resource type="Script" path="res://level1/Exit.gd" id="1_4v1mc"]
[ext_resource type="Texture2D" uid="uid://duvb08f7y60w3" path="res://icon.svg" id="1_aqk40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oiro8"]
size = Vector2(16, 16)

[node name="Exit" type="Node2D"]
script = ExtResource("1_4v1mc")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_aqk40")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_oiro8")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_entered"]
